--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0",
     "express": "^4.17.1",
+    "html-react-parser": "^1.2.6",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.0",
     "react-bootstrap-validation": "^0.1.11",
