--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^17.0.2",
     "react-image": "^4.0.3",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.2.4",
